# ai-study-for-scratch

./: pyproject.toml
ai_study/: chapter1.ipynb
ai_study/chapter1/: chapter1.ipynb  problem.md  solutions.ipynb
