[tool.poetry]
name = "ai-study"
version = "0.1.0"
description = ""
authors = ["rukeni <rukeni@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jupyter = "^1.1.1"
notebook = "^7.4.0"
ipykernel = "^6.29.5"
numpy = "^2.2.4"
pandas = "^2.2.3"
matplotlib = "^3.10.1"
scipy = "^1.15.2"
scikit-learn = "^1.6.1"
statsmodels = "^0.14.4"
seaborn = "^0.13.2"
jupyterlab = "^4.4.0"
ipywidgets = "^8.1.6"
nbconvert = "^7.16.6"
plotly = "^6.0.1"
bokeh = "^3.7.2"
holoviews = "^1.20.2"
hvplot = "^0.11.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
